got collision working

--- a/FPS_GAME/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/FPS_GAME/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -194,7 +194,7 @@ bPreloadProjectPluginModules=True
 LastLevel=/Game/Levels/L_Fps
 
 [ModuleFileTracking]
-FPS_GAME.TimeStamp=2023.12.04-23.25.49
+FPS_GAME.TimeStamp=2023.12.05-02.56.20
 FPS_GAME.LastCompileMethod=Runtime
 StorageServerClient.TimeStamp=2023.11.03-23.56.40
 StorageServerClient.LastCompileMethod=External
@@ -1296,16 +1296,16 @@ LogVisualizerSettings="\"Object\" "
 InputAction="\"Object\" "
 DataAsset="\"Object\" "
 InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[0]\" \"Object.Mappings.Mappings.Mappings[1]\" \"Object.Mappings.Mappings.Mappings[2]\" \"Object.Mappings.Mappings.Mappings[3]\" \"Object.Mappings.Mappings.Mappings[4]\" \"Object.Mappings.Mappings.Mappings[5]\" \"Object.Mappings.Mappings.Mappings[6]\" \"Object.Mappings.Mappings.Mappings[7]\" \"Object.Mappings.Mappings.Mappings[8]\" "
-SkeletalMeshComponent="\"Object\" "
-SkinnedMeshComponent="\"Object\" "
-MeshComponent="\"Object\" "
+SkeletalMeshComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Tags.ComponentTags\" "
+SkinnedMeshComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Tags.ComponentTags\" "
+MeshComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Tags.ComponentTags\" "
 PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Tags.ComponentTags\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
-StaticMeshComponent="\"Object\" "
+StaticMeshComponent="\"Object\" \"Object.Tags.ComponentTags\" "
 CameraComponent="\"Object\" "
 SpringArmComponent="\"Object\" "
-CapsuleComponent="\"Object\" \"Object.Tags.ComponentTags\" "
+CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Tags.ComponentTags\" "
 CanvasPanel="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -1505,31 +1505,40 @@ BackgroundBlur="\"Object\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.La
 MultiLineEditableText="\"Object\" "
 WB_AmmoBar_C="\"Object\" "
 SphereComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+TimerSpin_C="\"Object\" \"Object.Actor.Tags\" "
+CollectibleSpin="\"Object\" \"Object.Actor.Tags\" "
+HeartSpin_C="\"Object\" \"Object.Actor.Tags\" "
+PlayerStart="\"Object\" \"Object.Actor.Tags\" "
+NavigationObjectBase="\"Object\" \"Object.Actor.Tags\" "
+StaticMeshActor="\"Object\" \"Object.Actor.Tags\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Character/BP_MainCharacter.BP_MainCharacter
+OpenAssetsAtExit=/Game/Blueprints/TimerSpin.TimerSpin
+OpenAssetsAtExit=/Game/Blueprints/HeartSpin.HeartSpin
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Character/BP_MainCharacter
-MRUItem1=/Game/Widgets_UI/WB_Timer
-MRUItem2=/Game/Blueprints/BP_StaticPlatform
-MRUItem3=/Game/Blueprints/TimerSpin
-MRUItem4=/Game/Models/Collecitibles/SM_Clock
-MRUItem5=/Game/Blueprints/BP_TimerActor
-MRUItem6=/Game/Levels/L_Fps
-MRUItem7=/Game/Widgets_UI/WB_AmmoBar
-MRUItem8=/Game/Widgets_UI/WB_Crosshair
-MRUItem9=/Game/Widgets_UI/WB_GameOver
-MRUItem10=/Game/Levels/MainMenu
-MRUItem11=/Game/Widgets_UI/WB_Complete
-MRUItem12=/Game/Levels/L_Fps_2
-MRUItem13=/Game/Levels/L_Fps_1
-MRUItem14=/Game/Widgets_UI/WB_MainMenu
-MRUItem15=/Game/Blueprints/BP_Rocks1
-MRUItem16=/Game/Blueprints/BP_NonDissapearingPlatform
-MRUItem17=/Game/Blueprints/BP_DissapearingPlatform
-MRUItem18=/Game/Textures/T_WarningSign_Mat_3
-MRUItem19=/Game/Character/Input/AI_Crouch
+MRUItem0=/Game/Blueprints/HeartSpin
+MRUItem1=/Game/Levels/L_Fps
+MRUItem2=/Game/Blueprints/TimerSpin
+MRUItem3=/Game/Character/BP_MainCharacter
+MRUItem4=/Game/Widgets_UI/WB_Timer
+MRUItem5=/Game/Blueprints/BP_StaticPlatform
+MRUItem6=/Game/Models/Collecitibles/SM_Clock
+MRUItem7=/Game/Blueprints/BP_TimerActor
+MRUItem8=/Game/Widgets_UI/WB_AmmoBar
+MRUItem9=/Game/Widgets_UI/WB_Crosshair
+MRUItem10=/Game/Widgets_UI/WB_GameOver
+MRUItem11=/Game/Levels/MainMenu
+MRUItem12=/Game/Widgets_UI/WB_Complete
+MRUItem13=/Game/Levels/L_Fps_2
+MRUItem14=/Game/Levels/L_Fps_1
+MRUItem15=/Game/Widgets_UI/WB_MainMenu
+MRUItem16=/Game/Blueprints/BP_Rocks1
+MRUItem17=/Game/Blueprints/BP_NonDissapearingPlatform
+MRUItem18=/Game/Blueprints/BP_DissapearingPlatform
+MRUItem19=/Game/Textures/T_WarningSign_Mat_3
 
 [DetailCategories]
 LandscapeEditorObject.New Landscape=True
@@ -3055,8 +3064,36 @@ TimerSpin_C.WorldPartition=True
 TimerSpin_C.Events=True
 TimerSpin_C.Networking=True
 TimerSpin_C.TransformCommon=True
+HeartSpin_C.Movement=True
+HeartSpin_C.Tick=True
+HeartSpin_C.Replication=True
+HeartSpin_C.Rendering=True
+HeartSpin_C.Collision=True
+HeartSpin_C.Actor=True
+HeartSpin_C.Input=True
+HeartSpin_C.HLOD=True
+HeartSpin_C.Physics=True
+HeartSpin_C.WorldPartition=True
+HeartSpin_C.Events=True
+HeartSpin_C.TransformCommon=True
+HeartSpin_C.Networking=True
+PrimitiveComponent.TransformCommon=True
+PrimitiveComponent.Materials=True
+PrimitiveComponent.HLOD=True
+PrimitiveComponent.ComponentTick=True
+PrimitiveComponent.Rendering=True
+PrimitiveComponent.Physics=True
+PrimitiveComponent.PathTracing=True
+PrimitiveComponent.Collision=True
+PrimitiveComponent.Navigation=True
+PrimitiveComponent.Tags=True
+PrimitiveComponent.ComponentReplication=True
+PrimitiveComponent.Variable=True
+PrimitiveComponent.Cooking=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/HeartSpin.HeartSpin;
+RecentlyPlaced=/Game/Models/Collecitibles/SK_Heart.SK_Heart;
 RecentlyPlaced=/Game/Blueprints/TimerSpin.TimerSpin;
 RecentlyPlaced=/Game/Blueprints/BP_TimerActor.BP_TimerActor;
 RecentlyPlaced=/Game/Models/Collecitibles/SM_Clock.SM_Clock;
@@ -3075,8 +3112,6 @@ RecentlyPlaced=/Game/Blueprints/BP_MoveablePlatformVertical.BP_MoveablePlatformV
 RecentlyPlaced=/Game/Blueprints/BP_MoveablePlatform.BP_MoveablePlatform;
 RecentlyPlaced=/Game/Models/Platforms/SK_Platform_Move.SK_Platform_Move;
 RecentlyPlaced=/Game/Blueprints/BP_Lava.BP_Lava;
-RecentlyPlaced=/Game/Blueprints/BP_CheckPoints.BP_CheckPoints;
-RecentlyPlaced=/Game/Models/Drones/SM_DroneLight.SM_DroneLight;
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3251,7 +3286,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/Widgets_UI
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -3343,13 +3378,22 @@ PointLightComponent=SkeletalMeshComponent.Physics.ConstraintsGroup
 K2Node_VariableGet=SkeletalMeshComponent.Physics.ConstraintsGroup,BP_MainCharacter_C.TransformCommon.Transform,BP_MainCharacter_C.Materials.MaterialList,BP_MainCharacter_C.Physics.ConstraintsGroup
 PropertyWrapper=SkeletalMeshComponent.Physics.ConstraintsGroup,BP_MainCharacter_C.TransformCommon.Transform,BP_MainCharacter_C.Materials.MaterialList,BP_MainCharacter_C.Physics.ConstraintsGroup
 WB_GameOver_C=SkeletalMeshComponent.Physics.ConstraintsGroup,BP_MainCharacter_C.TransformCommon.Transform,BP_MainCharacter_C.Materials.MaterialList,BP_MainCharacter_C.Physics.ConstraintsGroup
-BP_StaticPlatform_C=
+BP_StaticPlatform_C=SkeletalMeshComponent.Physics.ConstraintsGroup,BP_MainCharacter_C.TransformCommon.Transform,BP_MainCharacter_C.Materials.MaterialList,BP_MainCharacter_C.Physics.ConstraintsGroup
 BoxComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,BP_MainCharacter_C.TransformCommon.Transform,BP_MainCharacter_C.Materials.MaterialList,BP_MainCharacter_C.Physics.ConstraintsGroup
 MultiLineEditableText=SkeletalMeshComponent.Physics.ConstraintsGroup,BP_MainCharacter_C.TransformCommon.Transform,BP_MainCharacter_C.Materials.MaterialList,BP_MainCharacter_C.Physics.ConstraintsGroup
 WB_AmmoBar_C=SkeletalMeshComponent.Physics.ConstraintsGroup,BP_MainCharacter_C.TransformCommon.Transform,BP_MainCharacter_C.Materials.MaterialList,BP_MainCharacter_C.Physics.ConstraintsGroup
 MainCharacter=
 K2Node_FunctionResult=SkeletalMeshComponent.Physics.ConstraintsGroup,BP_MainCharacter_C.TransformCommon.Transform,BP_MainCharacter_C.Materials.MaterialList,BP_MainCharacter_C.Physics.ConstraintsGroup
 CapsuleComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,BP_MainCharacter_C.TransformCommon.Transform,BP_MainCharacter_C.Materials.MaterialList,BP_MainCharacter_C.Physics.ConstraintsGroup
+K2Node_VariableSet=SkeletalMeshComponent.Physics.ConstraintsGroup,BP_MainCharacter_C.TransformCommon.Transform,BP_MainCharacter_C.Materials.MaterialList,BP_MainCharacter_C.Physics.ConstraintsGroup
+PlayerStart=SkeletalMeshComponent.Physics.ConstraintsGroup,BP_MainCharacter_C.TransformCommon.Transform,BP_MainCharacter_C.Materials.MaterialList,BP_MainCharacter_C.Physics.ConstraintsGroup
+SceneComponent=
+HeartSpin_C=SkeletalMeshComponent.Physics.ConstraintsGroup,BP_MainCharacter_C.TransformCommon.Transform,BP_MainCharacter_C.Materials.MaterialList,BP_MainCharacter_C.Physics.ConstraintsGroup
+TimerSpin_C=SkeletalMeshComponent.Physics.ConstraintsGroup,BP_MainCharacter_C.TransformCommon.Transform,BP_MainCharacter_C.Materials.MaterialList,BP_MainCharacter_C.Physics.ConstraintsGroup
+BP_Rocks1_C=SkeletalMeshComponent.Physics.ConstraintsGroup,BP_MainCharacter_C.TransformCommon.Transform,BP_MainCharacter_C.Materials.MaterialList,BP_MainCharacter_C.Physics.ConstraintsGroup
+StaticMeshComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,BP_MainCharacter_C.TransformCommon.Transform,BP_MainCharacter_C.Materials.MaterialList,BP_MainCharacter_C.Physics.ConstraintsGroup
+StaticMeshActor=SkeletalMeshComponent.Physics.ConstraintsGroup,BP_MainCharacter_C.TransformCommon.Transform,BP_MainCharacter_C.Materials.MaterialList,BP_MainCharacter_C.Physics.ConstraintsGroup
+BP_Lava_C=SkeletalMeshComponent.Physics.ConstraintsGroup,BP_MainCharacter_C.TransformCommon.Transform,BP_MainCharacter_C.Materials.MaterialList,BP_MainCharacter_C.Physics.ConstraintsGroup
 
 [AssetEditorToolkitTabLocation]
 /Game/Character/Input/AI_Look.AI_Look=1
@@ -3405,6 +3449,7 @@ CapsuleComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,BP_MainCharacter
 /Game/Blueprints/BP_TimerActor.BP_TimerActor=1
 /Game/Blueprints/TimerSpin.TimerSpin=1
 /Game/Widgets_UI/WB_Timer.WB_Timer=1
+/Game/Blueprints/HeartSpin.HeartSpin=1
 
 [PathColor]
 /Game/Blueprints=(R=0.000000,G=0.189032,B=0.467784,A=1.000000)
@@ -3531,6 +3576,7 @@ BP_NonDissapearingPlatform_C.Tick=False
 BP_NonDissapearingPlatform_C.Replication=False
 Button.Interaction=False
 BP_StaticPlatform_C.Actor=False
+TimerSpin_C.Collision=False
 
 [MessageLog]
 LastLogListing=PIE
