--- a/FPS_GAME/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/FPS_GAME/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -156,8 +156,8 @@ CameraSpeed=5
 SnapScaleEnabled=False
 
 [MRU]
-MRUItem0=/Game/Levels/L_Fps
-MRUItem1=/Game/Levels/MainMenu
+MRUItem0=/Game/Levels/MainMenu
+MRUItem1=/Game/Levels/L_Fps
 MRUItem2=/Game/Levels/L_Fps_2
 MRUItem3=/Game/Levels/L_Fps_1
 
@@ -191,11 +191,11 @@ bPreloadProjectModules=True
 bPreloadProjectPluginModules=True
 
 [EditorStartup]
-LastLevel=/Game/Levels/L_Fps
+LastLevel=/Game/Levels/MainMenu
 
 [ModuleFileTracking]
-FPS_GAME.TimeStamp=2023.12.06-14.20.56
-FPS_GAME.LastCompileMethod=Runtime
+FPS_GAME.TimeStamp=2023.12.07-18.01.11
+FPS_GAME.LastCompileMethod=External
 StorageServerClient.TimeStamp=2023.11.03-23.56.40
 StorageServerClient.LastCompileMethod=External
 CookOnTheFly.TimeStamp=2023.11.03-23.55.44
@@ -1212,10 +1212,10 @@ Voice.TimeStamp=2023.11.03-23.56.50
 Voice.LastCompileMethod=External
 MovieSceneCapture.TimeStamp=2023.11.03-23.56.17
 MovieSceneCapture.LastCompileMethod=External
-SequencerWidgets.TimeStamp=2023.10.09-11.23.51
-SequencerWidgets.LastCompileMethod=Unknown
-TextureEditor.TimeStamp=2023.10.09-11.23.52
-TextureEditor.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2023.10.23-11.09.40
+SequencerWidgets.LastCompileMethod=External
+TextureEditor.TimeStamp=2023.10.23-11.09.41
+TextureEditor.LastCompileMethod=External
 ExternalImagePicker.TimeStamp=2023.10.09-11.23.47
 ExternalImagePicker.LastCompileMethod=Unknown
 MaterialEditor.TimeStamp=2023.10.09-11.23.49
@@ -1308,15 +1308,15 @@ SpringArmComponent="\"Object\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
 CanvasPanel="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object\" "
+Visual="\"Object\" "
 ProgressBar="\"Object\" \"Object.Progress.BorderPadding\" \"Object.Appearance.FillColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object\" "
 Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WB_PlayerHealth_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
-UserWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+UserWidget="\"Object\" "
 Texture2D="\"Object\" "
 Texture="\"Object\" "
 StreamableRenderAsset="\"Object\" "
@@ -1500,7 +1500,7 @@ AnimGraphNode_SequencePlayer="\"Object\" "
 AnimGraphNode_AssetPlayerBase="\"Object\" "
 AnimStateTransitionNode="\"Object\" "
 WB_Complete_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-WB_MainMenu_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+WB_MainMenu_C="\"Object\" "
 BackgroundBlur="\"Object\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
 MultiLineEditableText="\"Object\" "
 WB_AmmoBar_C="\"Object\" "
@@ -1520,31 +1520,38 @@ NiagaraSystem="\"Object\" "
 FXSystemAsset="\"Object\" "
 NiagaraComponent="\"Object\" \"Object.Tags.ComponentTags\" "
 FXSystemComponent="\"Object\" \"Object.Tags.ComponentTags\" "
+FileMediaSource="\"Object\" "
+BaseMediaSource="\"Object\" "
+MediaSource="\"Object\" "
+MediaPlayer="\"Object\" "
+SoundCue="\"Object\" "
+SoundBase="\"Object\" "
+SoundWave="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Models/Weapon/BulletTrail
-MRUItem1=/Game/Blueprints/MyProjectile
-MRUItem2=/Game/BP_Projectile
-MRUItem3=/Game/Levels/L_Fps
-MRUItem4=/Game/Blueprints/BP_Projectile
-MRUItem5=/Game/Models/Weapon/Trail
-MRUItem6=/Game/Blueprints/BP_StaticPlatform
-MRUItem7=/Game/Character/BP_MainCharacter
-MRUItem8=/Game/Models/Weapon/SphereMesh
-MRUItem9=/Game/Character/Input/IMC_CharacterMapping
-MRUItem10=/Game/Character/Input/IA_Shoot
-MRUItem11=/Game/Models/Weapon/Fbx_Default_Material
-MRUItem12=/Game/Models/Platforms/SM_Platform_1
-MRUItem13=/Game/Blueprints/HeartSpin
-MRUItem14=/Game/Blueprints/TimerSpin
-MRUItem15=/Game/Widgets_UI/WB_Timer
-MRUItem16=/Game/Models/Collecitibles/SM_Clock
-MRUItem17=/Game/Blueprints/BP_TimerActor
-MRUItem18=/Game/Widgets_UI/WB_AmmoBar
-MRUItem19=/Game/Widgets_UI/WB_Crosshair
+MRUItem0=/Game/Widgets_UI/WB_GameOver
+MRUItem1=/Game/Widgets_UI/gameover
+MRUItem2=/Game/Audio/button-pressed-38129
+MRUItem3=/Game/Audio/button-pressed-38129_Cue
+MRUItem4=/Game/Widgets_UI/WB_MainMenu
+MRUItem5=/Game/Models/Weapon/BulletTrail
+MRUItem6=/Game/Blueprints/MyProjectile
+MRUItem7=/Game/BP_Projectile
+MRUItem8=/Game/Levels/L_Fps
+MRUItem9=/Game/Blueprints/BP_Projectile
+MRUItem10=/Game/Models/Weapon/Trail
+MRUItem11=/Game/Blueprints/BP_StaticPlatform
+MRUItem12=/Game/Character/BP_MainCharacter
+MRUItem13=/Game/Models/Weapon/SphereMesh
+MRUItem14=/Game/Character/Input/IMC_CharacterMapping
+MRUItem15=/Game/Character/Input/IA_Shoot
+MRUItem16=/Game/Models/Weapon/Fbx_Default_Material
+MRUItem17=/Game/Models/Platforms/SM_Platform_1
+MRUItem18=/Game/Blueprints/HeartSpin
+MRUItem19=/Game/Blueprints/TimerSpin
 
 [DetailCategories]
 LandscapeEditorObject.New Landscape=True
@@ -3265,6 +3272,26 @@ NiagaraDebugHUDSettingsData.Perf Overview=True
 NiagaraDebugHUDSettingsData.Colors=True
 NiagaraDebugHUDSettingsData.Performance=True
 NiagaraDebuggerSpawnData.Spawn=True
+FileMediaSource.File=True
+FileMediaSource.Platforms=True
+SoundCue.Sound=True
+SoundCue.Attenuation=True
+SoundCue.Memory=True
+SoundCue.Effects=True
+SoundCue.Voice Management=True
+SoundCue.Developer=True
+SoundWave.Format=True
+SoundWave.Sound=True
+SoundWave.Analysis=True
+SoundWave.Loading=True
+SoundWave.Subtitles=True
+SoundWave.Info=True
+SoundWave.File Path=True
+SoundWave.Developer=True
+SoundWave.Voice Management=True
+SoundWave.Effects=True
+SoundWave.Attenuation=True
+Texture2D.Interchange =True
 
 [PlacementMode]
 RecentlyPlaced=/Game/Models/Weapon/RatexPistol.RatexPistol;
@@ -3431,8 +3458,8 @@ WmfMediaSettings=True
 InstalledPlugins=WMFCodecs
 
 [RootWindow]
-ScreenPosition=X=644.000 Y=41.000
-WindowSize=X=1280.000 Y=720.000
+ScreenPosition=X=213.600 Y=32.000
+WindowSize=X=1281.600 Y=721.600
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -3461,7 +3488,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Widgets_UI
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -3521,11 +3548,11 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [Directories2]
-UNR=../../../../../_Work/University/Year 3/UE5_Assesment/FPS_GAME/Content/Levels
+UNR=../../../../../../Users/anjum/Documents/GitHub/UE5_Assesment/FPS_GAME/Content/Levels
 BRUSH=../../../../../../Users/natal/Documents/University/Advanced Game Engine/Assesment/FPS_GAME/Content/
 FBX=../../../../../../Users/natal/Documents/University/Advanced Game Engine/Assesment/FPS_GAME/Content/
 FBXAnim=../../../../../../Users/natal/Documents/University/Advanced Game Engine/Assesment/FPS_GAME/Content/
-GenericImport=D:/Downloads/SphereMesh.FBX
+GenericImport=../../../../../../Users/anjum/Downloads/labyrinth-of-despair-166594.wav
 GenericExport=../../../../../../Users/natal/Documents/University/Advanced Game Engine/Assesment/FPS_GAME/Content/
 GenericOpen=../../../../../../Users/natal/Documents/University/Advanced Game Engine/Assesment/FPS_GAME/Content/
 GenericSave=../../../../../../Users/natal/Documents/University/Advanced Game Engine/Assesment/FPS_GAME/Content/
@@ -3536,9 +3563,9 @@ Project=C:/Program Files/Epic Games/UE_5.2/
 
 [Python]
 LastDirectory=
+RecentsFiles=C:/Program Files/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=F:/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=C:/Program Files/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [DetailCustomWidgetExpansion]
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Character/Input/AI_Jump.AI_Jump,InputMappingContext.Mappings.ActionMappings./Game/Character/Input/AI_Look.AI_Look,InputMappingContext.Mappings.ActionMappings./Game/Character/Input/AI_Move.AI_Move,InputMappingContext.Mappings.ActionMappings./Game/Character/Input/AI_Damage.AI_Damage,InputMappingContext.Mappings.ActionMappings./Game/Character/Input/AI_Health.AI_Health,InputMappingContext.Mappings.ActionMappings./Game/Character/Input/AI_Crouch.AI_Crouch,InputMappingContext.Mappings.ActionMappings./Game/Character/Input/IA_Shoot.IA_Shoot
@@ -3575,6 +3602,7 @@ BP_Projectile_C=SkeletalMeshComponent.Physics.ConstraintsGroup,BP_MainCharacter_
 SphereComponent=
 NiagaraComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,BP_MainCharacter_C.TransformCommon.Transform,BP_MainCharacter_C.Materials.MaterialList,BP_MainCharacter_C.Physics.ConstraintsGroup
 MyProjectile_C=SkeletalMeshComponent.Physics.ConstraintsGroup,BP_MainCharacter_C.TransformCommon.Transform,BP_MainCharacter_C.Materials.MaterialList,BP_MainCharacter_C.Physics.ConstraintsGroup
+WB_MainMenu_C=SkeletalMeshComponent.Physics.ConstraintsGroup,BP_MainCharacter_C.TransformCommon.Transform,BP_MainCharacter_C.Materials.MaterialList,BP_MainCharacter_C.Physics.ConstraintsGroup
 
 [AssetEditorToolkitTabLocation]
 /Game/Character/Input/AI_Look.AI_Look=1
@@ -3636,6 +3664,7 @@ MyProjectile_C=SkeletalMeshComponent.Physics.ConstraintsGroup,BP_MainCharacter_C
 /Game/Character/Input/IA_Shoot.IA_Shoot=1
 /Game/Models/Weapon/SphereMesh.SphereMesh=1
 /Game/Models/Weapon/BulletTrail.BulletTrail=0
+/Game/Widgets_UI/gameover.gameover=1
 
 [PathColor]
 /Game/Blueprints=(R=0.000000,G=0.189032,B=0.467784,A=1.000000)
